platform/apps/gitea/network/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gitea-gateway
  namespace: gitea
spec:
  selector:
    istio: ingressgateway
  servers:
    # HTTPS Web
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: gitea-tls
      hosts:
        - git.asnk.io

    # SSH (TCP)
    - port:
        number: 2222
        name: ssh
        protocol: TCP
      hosts:
        - git.asnk.io
