platform/apps/gitea/network/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: gitea
  namespace: gitea
spec:
  host: gitea.gitea.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: gitea-cnpg-rw
  namespace: gitea
spec:
  host: gitea-cnpg-rw.gitea.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: gitea-redis
  namespace: gitea
spec:
  host: gitea-redis.gitea.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: gitea-meilisearch
  namespace: gitea
spec:
  host: gitea-meilisearch.gitea.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: hetzner-objectstorage
  namespace: gitea
spec:
  host: fsn1.your-objectstorage.com
  trafficPolicy:
    tls:
      mode: SIMPLE
      sni: fsn1.your-objectstorage.com
    connectionPool:
      http:
        h2UpgradePolicy: DO_NOT_UPGRADE
