platform/apps/gitea/network/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-mesh
  namespace: gitea
spec:
  parentRefs:
    - name: mesh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitea
          port: 3000
